# SentenCPP

./: CMakeLists.txt  README.md  main.cpp
encoder/include/: EncoderInterface.h  WordPiece.h
encoder/src/: WordPiece.cpp
include/sentenCPP/embedding_utils/: VectorMaths.h
include/sentenCPP/tokenizer/: TokenizerInterface.h
inference/include/: ORTWrapper.h
inference/src/: ORTWrapper.cpp
src/: VectorMaths.cpp
tokenizer/include/: TokenizerInterface.h  VocabList.h  WordPiece.h
tokenizer/src/: VocabList.cpp  WordPiece.cpp
